--- a/resume.css
+++ b/resume.css
@@ -1,62 +1,91 @@
-
 .container {
-    display: flex;
-    width: 70%;
+    width: 60vw;
     height: 100vh;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
+    padding-top: 5vh;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.container-profile {
+.container-left {
+    color: #2d2d81;
+    float: left;
+    width: 25%;
+    padding-right: 4rem;
+
+}
+.container-profile{
     text-align: center;
-    color: rgb(45, 45, 129);
-    font-family: sans-serif;
+    padding-bottom: 10vh;
 }
 
-.container-summary, .container-education,
- .container-navigation-bar, .container-experience{
-    color: rgb(45, 45, 129);
-    font-family: sans-serif;  
+.container-right{
+    margin-left: 35%;
 }
 
-div {
-    padding: 20px;
+.heading {
+    font-size: 1.5em;
+    font-weight: bolder;
+    padding-bottom: 1rem;
+    color: #2d2d81;
 }
 
+.sub-heading {
+    color: #2d2d81;
+  
+}
+
+p {
+    color: #3171a5;
+    font-size: .9em;
+    padding-bottom: 2rem;
+}
+
+.container-experience{
+    padding-bottom: 2rem;
+}
 img {
-    border-radius: 50%;
-    height: 30vh;
+    border-radius: 50rem;
+    height: 15vh;
 }
 
 button {
-    text-shadow: 2px 2px 10px red;
-    background-color: rgb(41, 41, 143);
+    background-color: #5050d2;
+    border-color: #5042e7;
     color: #ffffff;
-    border-radius: 10px ;
-    padding: 10px;
-    margin: 15%;
+    border-radius: .5rem ;
+    padding: .5rem;
+    margin: 1.5rem;
     cursor: pointer;
 }
 
-.company-location {
-    padding-left: 15%;
-}
-
-.working-hours {
+.hours {
     color: black;
     float: right;
-    border-radius: 8px;
-    padding: 2px;
-    background-color: rgb(16, 239, 165);
-    border: 1px solid black;
+    padding: .4rem .5rem;
+    width: 7vw;
+    text-align: center;
+    background-color: #e1f1ec;
+    border-radius: 1.5rem;
+    font-weight: 530;    
 }
 
-.duration{
+.sub-informations {
+    padding-top: 1.5rem;
+    font-size: small; 
+    color: #9eb6ca;
+    padding-bottom: 10px;
+}
+
+.duration {
     float: right;
-   
 }
 
-.company-name,.institute-name,
-.duration, .company-location {
-    color: rgb(158, 182, 202);
+.company-name {
+    margin-right: 5vh;
+}
+/* for horizontal line */
+.options, .role-information,
+.education-information {
+    border-bottom: 1px solid #e1edef;
+    padding: 10px 0px;
 }
